--- a/appstate.json
+++ b/appstate.json
@@ -1,1 +1,110 @@
-এখানের টেক্সট গুলো কেটে আপনার ফেসবুক আইডির কুকি বসান ✅
+[
+	{
+		"key": "dbln",
+		"value": "%7B%2261584295891047%22%3A%22N3ISjwSG%22%7D",
+		"domain": "facebook.com",
+		"path": "/login/device-based/",
+		"hostOnly": false,
+		"creation": "2025-12-06T02:11:16.671Z",
+		"lastAccessed": "2025-12-06T02:11:16.672Z"
+	},
+	{
+		"key": "datr",
+		"value": "c4wzaVHKecf9sbExpQx8jhdd",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-12-06T02:11:16.672Z",
+		"lastAccessed": "2025-12-06T02:11:16.672Z"
+	},
+	{
+		"key": "sb",
+		"value": "c4wzaeDQic4guJPhtkMzvVqg",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-12-06T02:11:16.672Z",
+		"lastAccessed": "2025-12-06T02:11:16.672Z"
+	},
+	{
+		"key": "c_user",
+		"value": "61584295891047",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-12-06T02:11:16.672Z",
+		"lastAccessed": "2025-12-06T02:11:16.672Z"
+	},
+	{
+		"key": "xs",
+		"value": "28%3Aw0MRXK52Ap7o1A%3A2%3A1764986151%3A-1%3A-1",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-12-06T02:11:16.672Z",
+		"lastAccessed": "2025-12-06T02:11:16.672Z"
+	},
+	{
+		"key": "locale",
+		"value": "en_US",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-12-06T02:11:16.672Z",
+		"lastAccessed": "2025-12-06T02:11:16.672Z"
+	},
+	{
+		"key": "vpd",
+		"value": "v1%3B674x360x2",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-12-06T02:11:16.672Z",
+		"lastAccessed": "2025-12-06T02:11:16.672Z"
+	},
+	{
+		"key": "fbl_st",
+		"value": "101625888%3BT%3A29416450",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-12-06T02:11:16.672Z",
+		"lastAccessed": "2025-12-06T02:11:16.672Z"
+	},
+	{
+		"key": "wl_cbv",
+		"value": "v2%3Bclient_version%3A3007%3Btimestamp%3A1764987037",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-12-06T02:11:16.672Z",
+		"lastAccessed": "2025-12-06T02:11:16.673Z"
+	},
+	{
+		"key": "fr",
+		"value": "0YwD5z5ukZTpPoWXp.AWfRAbfuopem_-s-yJ5uuKnBKMjoB60IYuc5zJOTjxD5sPU9OHw.BpM4xz..AAA.0.0.BpM5Cj.AWdr3k7iGeZoFryc46kGHiDn2LI",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-12-06T02:11:16.673Z",
+		"lastAccessed": "2025-12-06T02:11:16.673Z"
+	},
+	{
+		"key": "wd",
+		"value": "980x1835",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-12-06T02:11:16.673Z",
+		"lastAccessed": "2025-12-06T02:11:16.673Z"
+	},
+	{
+		"key": "presence",
+		"value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1764987076592%2C%22v%22%3A1%7D",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-12-06T02:11:16.673Z",
+		"lastAccessed": "2025-12-06T02:11:16.673Z"
+	}
+]
