Update BOTNAME and ADMINBOT entries in config

--- a/config.json
+++ b/config.json
@@ -11,14 +11,14 @@
   "EMAIL": "your email",
   "PASSWORD": "your password",
   "OTPKEY": "",
-  "BOTNAME": "─꯭─⃝‌‌𝐒𝐡𝐚𝐡𝐚𝐝𝐚𝐭 𝐂𝐡𝐚𝐭 𝐁𝐨𝐭",
+  "BOTNAME": "─꯭─⃝‌‌JANNAT-BOT",
   "PREFIX": "/",
   "reactUnsend": ["😡", "🤧", "😤", "😠"],
 
   "ADMINBOT": [
-    "100001039692046",
-    "100001039692046",
-    "100001039692046"
+    "61556298365773",
+    "61556298365773",
+    "61556298365773"
   ],
   "NDH": ["100001039692046"],
   "adminOnly": false,
