--- a/config.json
+++ b/config.json
@@ -11,7 +11,7 @@
   "EMAIL": "your email",
   "PASSWORD": "your password",
   "OTPKEY": "",
-  "BOTNAME": "─꯭─⃝‌‌JANNAT-BOT",
+  "BOTNAME": "─꯭─⃝‌‌JANNAT-CHAT-BOT",
   "PREFIX": "/",
   "reactUnsend": ["😡", "🤧", "😤", "😠"],
 
